# Sentinel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: circuit_breaker.rs  retry.rs  validation.rs
src/: circuit_breaker.rs  context.rs  lib.rs  retry.rs  validation.rs
